bugfix gameoverscreen clipping

--- a/style.css
+++ b/style.css
@@ -204,8 +204,7 @@ h2 {
 }
 
 .win-screen-img {
-    width: 100%;
-    height: 80%;
+    width: 90%;
     display: flex;
     justify-content: center;
 }
@@ -327,6 +326,11 @@ h2 {
 .colleted-coins-end-screen {
     color: white;
     font-size: 28px;
+    position: absolute;
+    bottom: 60px;
+    z-index: 10;
+    text-align: center;
+    width: 100%;
 }
 
 .close-container {
@@ -371,7 +375,7 @@ h2 {
 
 .touch-controls {
     position: absolute;
-    bottom: 0;
+    bottom: 15px;
     left: 0;
     width: 100%;
     height: 45px;
@@ -467,6 +471,11 @@ h2 {
         overflow: hidden;
         height: 100vh;
         width: 100vw;
+    }
+
+    .colleted-coins-end-screen {
+        font-size: 22px;
+        bottom: 60px;
     }
 
     .canvas-container {
